<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_blur"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_message_reply_text"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_image_album"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_replace"
            android:icon="@drawable/ic_clipboard_text"
            android:title="@string/replace" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_book_open_variant"
            android:title="@string/timetable" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/history" />
            <item
                android:id="@+id/nav_leader"
                android:icon="@drawable/ic_account_multiple"
                android:title="@string/headCollege" />
            <item
                android:id="@+id/nav_contacts"
                android:icon="@drawable/ic_contact_mail"
                android:title="@string/contacts" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_google_maps"
                android:title="@string/map" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
