<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="500dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="right"
        android:text="@string/send"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:id="@+id/justId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/topic"/>
        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/justId"
            android:inputType="text"
            android:layout_marginLeft="5dp"
            android:textIsSelectable="true"
            android:gravity="center"/>
        <TextView
            android:id="@+id/justId2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/title"
            android:text="@string/text"/>
        <EditText
            android:id="@+id/textSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/justId2"
            android:inputType="text"
            android:textIsSelectable="true"
            android:gravity="left"/>

    </RelativeLayout>

</LinearLayout>